load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "executable_path",
    srcs = select({
        "@platforms//os:windows": ["windows_executable_path.cc"],
        "//conditions:default": ["unix_executable_path.cc"],
    }),
    hdrs = ["executable_path.hh"],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:Kernel32"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
