load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fetch_sources",
    visibility = ["//visibility:public"],
    hdrs = ["fetch_sources.hh"],
    srcs = ["fetch_sources.cc"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@com_github_biojppm_rapidyaml//:ryml",
        "@com_github_biojppm_c4core//:c4core",
    ],
)
