load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fetch_sources",
    srcs = ["fetch_sources.cc"],
    hdrs = ["fetch_sources.hh"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@boost//libs/process",
        "@com_github_biojppm_c4core//:c4core",
        "@com_github_biojppm_rapidyaml//:ryml",
    ],
)
