load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "fetch_sources",
    srcs = ["fetch_sources.cc"],
    hdrs = ["fetch_sources.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/cpp/runfiles",
        "@boost//libs/process",
        "@com_github_biojppm_c4core//:c4core",
        "@com_github_biojppm_rapidyaml//:ryml",
    ],
)
