load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "find_cpp_compiler",
    srcs = ["find_cpp_compiler.cc"],
    hdrs = ["find_cpp_compiler.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//progress_report",
        "@bazel_tools//tools/cpp/runfiles",
        "@boost//libs/algorithm",
        "@boost//libs/process",
        "@nlohmann_json//:json",
    ],
)
