load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "generate_files",
    srcs = ["generate_files.cc"],
    hdrs = ["generate_files.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//progress_report",
        "@boost//libs/process",
    ],
)
