load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "runtime_compile",
    srcs = ["runtime_compile.cc"],
    hdrs = ["runtime_compile.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//fetch_sources",
        "//find_cpp_compiler",
        "//find_wasmer",
        "//generate_files",
        "//progress_report",
        "//util:report_subcommand_output",
        "@boost//libs/dll",
        "@boost//libs/process",
        "@ecsact_interpret",
        "@ecsact_lang_cpp//:support",
        "@ecsact_runtime//:async",
        "@ecsact_runtime//:core",
        "@ecsact_runtime//:dynamic",
        "@ecsact_runtime//:meta",
        "@ecsact_runtime//:serialize",
        "@ecsact_runtime//:static",
        "@magic_enum",
    ],
)
