load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "managed_temp_directory",
    srcs = ["managed_temp_directory.cc"],
    hdrs = ["managed_temp_directory.hh"],
    copts = copts,
    deps = [
        "@boost//libs/process",
    ],
)

cc_library(
    name = "report_subcommand_output",
    hdrs = ["report_subcommand_output.hh"],
    copts = copts,
    deps = [
        "//progress_report",
        "@boost//libs/process",
    ],
)
